--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "concurrently": "^6.0.2",
     "core-js": "^3.4.3",
+    "express": "^4.17.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.15",
